--- a/JobRecommend-Flask-Api/requirements.txt
+++ b/JobRecommend-Flask-Api/requirements.txt
@@ -1,4 +1,9 @@
-Flask==2.0.2
-numpy==1.21.2
-scikit-learn==0.24.2
-scipy==1.7.1
+Flask
+Flask-PyMongo
+python-dotenv
+flask-cors
+numpy
+scikit-learn
+pymongo
+bson
+flask_cors
