--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.39",
     "@hookform/resolvers": "^3.6.0",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -22,13 +23,16 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "ag-charts-enterprise": "^10.1.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "frontend": "file:",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
+    "mapbox-gl": "^3.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
@@ -36,6 +40,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-table": "^7.8.0",
+    "react-tables": "^1.0.2",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
