--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.3",
     "backend": "file:",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
