--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
     "@hookform/resolvers": "^3.6.0",
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
