--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.16.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -28,6 +31,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3-geo": "^3.1.1",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "frontend": "file:",
@@ -41,6 +45,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-simple-maps": "^3.0.0",
     "react-table": "^7.8.0",
     "react-tables": "^1.0.2",
     "socket.io-client": "^4.7.5",
