--- a/frontend/.env
+++ b/frontend/.env
@@ -8,3 +8,7 @@ APP_PASSWORD= zopi zluz cydo cgkx
 # http://universities.hipolabs.com/search?country=United+States      university api
 
 # ed488739b1580aa82d782b7fa032981c  position stack api
+
+
+
+# https://discord.gg/8Fr4yS7U      discord channel
