--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
+    "@canvasjs/react-charts": "^1.0.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.16.7",
+    "@mui/x-charts": "^7.13.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -29,6 +31,8 @@
     "@reduxjs/toolkit": "^2.2.5",
     "ag-charts-enterprise": "^10.1.0",
     "axios": "^1.7.2",
+    "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
@@ -39,6 +43,7 @@
     "lucide-react": "^0.396.0",
     "mapbox-gl": "^3.5.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
@@ -48,6 +53,7 @@
     "react-simple-maps": "^3.0.0",
     "react-table": "^7.8.0",
     "react-tables": "^1.0.2",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
