--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
     "@canvasjs/react-charts": "^1.0.2",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.16.7",
     "@mui/x-charts": "^7.13.0",
+    "@mui/x-data-grid": "^7.14.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -30,9 +31,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "ag-charts-enterprise": "^10.1.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.5",
     "canvasjs-react-charts": "^1.0.5",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
