--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "formik": "^2.4.6",
     "frontend": "file:",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
     "mapbox-gl": "^3.5.2",
@@ -56,6 +57,7 @@
     "react-simple-maps": "^3.0.0",
     "react-table": "^7.8.0",
     "react-tables": "^1.0.2",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
