--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.3",
+    "axios": "^1.7.7",
     "backend": "file:",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
@@ -18,13 +18,17 @@
     "docker": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "hawk": "^9.0.2",
+    "highlight.js": "^11.10.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^14.1.0",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "socket.io": "^4.7.5",
+    "tough-cookie": "^4.1.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
