--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,22 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "jest",
+    "test:models": "jest __tests__/models",
+    "test:middlewares": "jest __tests__/middlewares",
+    "test:config": "jest __tests__/config",
+    "test:schemas": "jest __tests__/schemas"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "moduleFileExtensions": ["js", "json"],
+    "testMatch": ["**/__tests__/**/*.test.js"],
+    "coverageDirectory": "./coverage",
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/**/*.config.js"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +47,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/register": "^7.24.6",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
